[metadata]
name = timeline-explorer
description = Timeline Explorer
long_description = file: README.md, LICENSE
keywords = timeline, explorer
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Security
    Topic :: Utilities

[options]
packages = find:
install_requires =
    rich
    PyQt5

[options.entry_points]
console_scripts =
    timeline-explorer = timeline_explorer.cli:app
    timeline-viewer = timeline_explorer.viewer:app
